tests/fixtures/negative/style/ForbiddenComment.kt
package style

// Fixed in tracked review
fun example() {
    // Handles edge case for empty input
    println("hello")
}
